l'ajout et la recuperation des donnees du projet et taches

--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -66,7 +66,7 @@
             <div class="titre">{{ projet.titre }}</div>
             <div class="cercle"></div>
           </div>
-          <div class="body">{{ projet.Description }}</div>
+          <div class="body">{{ projet.description }}</div>
           <div class="footidee">
             <div class="porteur">
               {{ projet.idGestionnaire }} Gere ce proojet
