--- a/src/app/components/idees-projet/idees-projet.component.html
+++ b/src/app/components/idees-projet/idees-projet.component.html
@@ -51,7 +51,7 @@
         <h1 class="right-first-text" [class.expanded]="isExpanded">Et si votre idée devenait le prochain grand projet?</h1>
         <img src="idees-projet.png" alt="Image d'un utilisateur qui propose des idées" class="idea-image" [class.expanded]="isExpanded">
         <p class="right-second-text" [class.expanded]="isExpanded">Partagez votre idée, et ensemble, faisons-en quelque chose de concret et d'impactant.</p>
-        <div class="propose-button" [class.expanded]="isExpanded" routerLink="proposer">
+        <div class="propose-button" [class.expanded]="isExpanded" routerLink="../proposer">
             <p style="color: white; font-size: 14pt;">Proposer une idée de projet</p>
         </div>
     </div>
