--- a/src/app/components/proteurProjet/index-porteur-projet/index-porteur-projet.component.css
+++ b/src/app/components/proteurProjet/index-porteur-projet/index-porteur-projet.component.css
@@ -8,6 +8,39 @@
     /* width: 90%; */
     overflow-y: auto;
 }
+
+/* pOUR La partie nav Bar */
+
+
+.principal-container {
+    display: grid;
+    grid-template-columns: 20% 80%;
+}
+
+.principal-container.collapsed {
+    grid-template-columns: 5% 95%;
+}
+
+.principal-container.signin {
+    display: contents;
+    grid-template-columns: none;
+}
+
+.pages-container, .sidebar-container {
+    width: 100%;
+    transition: width 0.3s ease-in-out;
+}
+
+.sidebar-container {
+    min-width: 200px;
+}
+
+.sidebar-container.collapsed {
+    min-width: 64px;
+}
+
+/* Fin de la partie nav bar */
+
 .containerPrincipal.longContainer{
   margin-left: 4.5%;
 }
