--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -20,7 +20,7 @@
             <input formControlName="email" type="email" required placeholder="Email" />
           </div>
           <div appearance="fill">
-            <input formControlName="password" type="password" required placeholder="Mote de passe" /><br>
+            <input formControlName="password" type="password" required placeholder="Mot de passe" /><br>
             <a class="aGauche" routerLink="/" style="float: right;margin-top:10px ;">Mot de passe Oublié ?</a>
           </div>
 
@@ -64,7 +64,7 @@
 </div>
 
 <div class="footer">
-  <p>&copy; 2025 CollabDev. <span> nous contacter</span></p>
+  <p>&copy; 2025 CollabDev. <span> Nous contacter</span></p>
 </div>
 
 
