--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="principal-container" [class.collapsed]="!getIsExpanded()" [class.hide]="isSignInPages || ispagevisiteur || isLoginPage">
-    <div class="sidebar-container" [class.collapsed]="!getIsExpanded()" [class.hide]="isSignInPages || ispagevisiteur || isLoginPage">
+<div class="principal-container" [class.collapsed]="!getIsExpanded()" [class.hide]="isSignInPages || ispagevisiteur || isLoginPage || isPageDetailCommentaire">
+    <div class="sidebar-container" [class.collapsed]="!getIsExpanded()" [class.hide]="isSignInPages || ispagevisiteur || isLoginPage || isPageDetailCommentaire">
     @switch (currentUserRole) {
         @case ('CONTRIBUTEUR') {
             <app-sidebar-menu-contributeur></app-sidebar-menu-contributeur>
