Commit de la part de Diallo apres la rectification

--- a/src/app/components/dashboard-gestionnaire/dashboard-gestionnaire.component.css
+++ b/src/app/components/dashboard-gestionnaire/dashboard-gestionnaire.component.css
@@ -214,8 +214,10 @@
 .card-content{
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     height: auto;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 10px;
     align-items: center;
 }
 .tous-voir{
