implementation de la partie contributeur et gestionnaire ainsi que la correction de certaine parties

--- a/src/app/components/UI/cardcontribution/cardcontribution.component.html
+++ b/src/app/components/UI/cardcontribution/cardcontribution.component.html
@@ -1,13 +1,13 @@
 <div class="card">
     <div id="left">
         <p>
-            Projet: {{contribution.nomProjet}}
+            Projet: {{contribution.projetTitre}}
         </p>
         <p>
-            Contributeur: {{contribution.prenomContributeur}} {{contribution.nomContributeur}}
+            Contributeur: {{contribution.contributeurPrenom}} {{contribution.contributeurNom}}
         </p>
         <p>
-            Tache: {{contribution.nomTache}}
+            <!-- Tache: {{contribution.nomTache}} -->
         </p>
     </div>
     <div id="right">
