--- a/src/app/components/UI/cardprojet/cardprojet.component.html
+++ b/src/app/components/UI/cardprojet/cardprojet.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" (click)="voirdetail(projets)" style="cursor:pointer;">
   <div class="card-header">
     <div class="en-tete">
       <span class="date">{{ projets.dateDebut | date:'dd/MMM/yyyy' }}</span>
